src/test/ui/consts/issue-44415.stderr
error[E0391]: cycle detected when const-evaluating + checking `Foo::bytes::{constant#0}`
  --> $DIR/issue-44415.rs:6:17
   |
LL |     bytes: [u8; unsafe { intrinsics::size_of::<Foo>() }],
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...which requires computing layout of `Foo`...
   = note: ...which requires computing layout of `[u8; _]`...
   = note: ...which requires normalizing `[u8; _]`...
note: ...which requires evaluating type-level constant...
  --> $DIR/issue-44415.rs:6:17
   |
LL |     bytes: [u8; unsafe { intrinsics::size_of::<Foo>() }],
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires const-evaluating + checking `Foo::bytes::{constant#0}`...
  --> $DIR/issue-44415.rs:6:17
   |
LL |     bytes: [u8; unsafe { intrinsics::size_of::<Foo>() }],
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires const-evaluating + checking `Foo::bytes::{constant#0}`, completing the cycle
note: cycle used when evaluating type-level constant
  --> $DIR/issue-44415.rs:6:17
   |
LL |     bytes: [u8; unsafe { intrinsics::size_of::<Foo>() }],
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
